--- a/css/contents/timeline.css
+++ b/css/contents/timeline.css
@@ -1,7 +1,6 @@
 /* タイムライン */
 div.contents.timeline .lines {
-	word-break: break-all;
-	word-wrap: break-word;
+  hyphens: auto;
 	white-space: normal;
 	overflow-y: hidden;
 	overflow-x: hidden;
@@ -248,8 +247,7 @@ div.contents.timeline .lines div.item > .toot .headcontainer .options .accsel {
 	display: none;
 	position: absolute;
 	right: 0;
-	word-break: break-all;
-	word-wrap: break-word;
+  hyphens: auto;
 	z-index: 8900;
 	border: 1px solid #101010;
 	box-shadow: 2px 2px 2px rgba( 0, 0, 0, 0.5 );
@@ -333,7 +331,7 @@ div.contents.timeline .lines div.item > .toot > .toot_text {
 
 	line-height: var(--toot-text-line-height);
 	user-select: text;
-	word-break: break-word;
+  hyphens: auto;
 	white-space: pre-wrap;
 }
 
@@ -482,8 +480,7 @@ div.contents.timeline .lines .readmore {
 div.contents.timeline .setting {
 	overflow-x: hidden;
 	overflow-y: hidden;
-	word-break: break-all;
-	word-wrap: break-word;
+  hyphens: auto;
 	white-space: nowrap;
 	height: 100%;
 }
